# TASM

./: .gitignore  CMakeLists.txt  README.md
HomomorphicStitching/scripts/: TileConfiguration_pb2.py  TileLayout.py  encode_changing_tiles.py  encode_tiles_mostly_evenly.py  sei.txt
HomomorphicStitching/stitcher/: AccessDelimiter.cpp  AccessDelimiter.h  BitArray.cpp  BitArray.h  BitArrayTests.cpp  BitStream.h  BitStreamTests.cpp  CMakeLists.txt  Context.cpp  Context.h  Emulation.cpp  Emulation.h  Golombs.cpp  Golombs.h  Headers.cpp  Headers.h  Nal.cpp  Nal.h  NalType.h  Opaque.cpp  Opaque.h  PictureParameterSet.cpp  PictureParameterSet.h  Profile.cpp  Profile.h  SequenceParameterSet.cpp  SequenceParameterSet.h  SliceSegmentLayer.cpp  SliceSegmentLayer.h  Stitcher.cpp  Stitcher.h  TileStitcher.cpp  TileStitcher.h  VideoParameterSet.cpp  VideoParameterSet.h  main.cpp
cmake/Modules/: FindFFmpeg.cmake  FindGPAC.cmake
core/: CMakeLists.txt
core/catalog/include/: Catalog.h  Files.h  TileConfigurationProvider.h  TileLayout.h
core/catalog/src/: Catalog.cc  Files.cc  TileConfigurationProvider.cc  TileLayout.cc
core/execution/include/: Coordinator.h
core/functions/include/: DropFrames.h  SelectPixels.h
core/hevc/include/: Emulation.h  Headers.h  Nal.h  PictureParameterSet.h  SequenceParameterSet.h  SliceSegmentLayer.h  StitchContext.h  Stitcher.h
core/hevc/src/: Emulation.cc  Headers.cc  Nal.cc  PictureParameterSet.cc  SequenceParameterSet.cc  SliceSegmentLayer.cc  Stitcher.cc
core/lightfield/include/: common.h
core/model/include/: Algebra.h  Functor.h  Interpolation.h  LightField.h  Metadata.h  Model.h  Visitor.h
core/model/src/: Algebra.cc
core/physical/include/: Adapters.h  CrackingOperators.h  DecodeOperators.h  DiscretizeOperators.h  EncodeOperators.h  HomomorphicOperators.h  IdentityOperators.h  InterpolateOperators.h  MapOperators.h  MaterializedLightField.h  MetadataLightField.h  MultiTileOperators.h  Runtime.h  SaveOperators.h  ScanOperators.h  SelectFramesOperators.h  SelectPixelsOperators.h  SharedDecodeOperators.h  SinkOperators.h  StoreOperators.h  SubqueryOperators.h  SubsetOperators.h  TasmOperators.h  TileOperators.h  TransferOperators.h  UnionOperators.h
core/physical/src/: CrackingOperators.cc  MetadataLightField.cc  MultiTileOperators.cc  Runtime.cc  TasmOperators.cc
core/planning/include/: HeuristicOptimizer.h  Plan.h  Rules.h
core/planning/src/: Plan.cc
core/pool/include/: Pool.h
core/predicates/include/: ContainsCar.h
core/predicates/src/: ContainsCar.cc
core/tasm/include/: RegretAccumulator.h  Tasm.h
core/transactions/include/: Transaction.h
core/transactions/src/: Transaction.cc
core/utility/include/: BitStream.h  Display.h  Distribution.h  Golombs.h  IntervalTree.h  KeyframeFinder.h  Rectangle.h  lazy.h  (+6 more)
docker/: Dockerfile  Dockerfile.environment
homomorphic_stitching/: CMakeLists.txt
homomorphic_stitching/include/: AccessDelimiter.h  BitArray.h  BitStream.h  Emulation.h  Golombs.h  Headers.h  Nal.h  NalType.h  Opaque.h  PictureParameterSet.h  Profile.h  SequenceParameterSet.h  SliceSegmentLayer.h  StitchContext.h  Stitcher.h  VideoParameterSet.h  bytestring.h
homomorphic_stitching/src/: BitArray.cc  Emulation.cc  Golombs.cc  Headers.cc  Nal.cc  PictureParameterSet.cc  SequenceParameterSet.cc  SliceSegmentLayer.cc  Stitcher.cc
modules/: README.md  draw_rectangles.cu  select_pixels.cu
plugins/yolo/: CMakeLists.txt  udf.cc
plugins/yolo_gpu/: 0001-Modifications-to-run-detection-on-a-GPU-frame.patch  CMakeLists.txt  instructions.md  udf.cc  udf.h
protobuf/: CMakeLists.txt  Metadata.proto  TileConfiguration.proto
python/: CMakeLists.txt
python/Examples/: Basics.ipynb
python/Examples/data/: birds.pkl
python/include/: TasmWrappers.h  WorkloadWrappers.h  utilities.h  wrappers.h
python/python_package/: setup.py
python/src/: bindings.cpp
python/tasm/: __init__.py
scripts/CreateBlackTiles/: make_tiles.py
scripts/RunVisualRoadTests/: RunVisualRoadExperiments.sh
tasm/: CMakeLists.txt
tasm-test/: CMakeLists.txt
tasm-test/src/: DatabaseTest.cc  LayoutBenchmarkTest.cc  SemanticIndexTest.cc  TasmTest.cc  VideoManagerTest.cc
tasm-test/test-inputs/tasm-test-resources/: test-labels.db  test-layout.db
tasm-test/test-inputs/video-manager-test-resources/: test-layout.db
tasm/encoding/include/: DecodeReader.h  DecodedPixelData.h  EncodeAPI.h  EncodeBuffer.h  EncodeWriter.h  EncodedData.h  Frame.h  GPUContext.h  Gpac.h  MP4Reader.h  MultipleEncoderManager.h  VideoDecoder.h  VideoDecoderSession.h  VideoEncoder.h  VideoEncoderSession.h  VideoLock.h
tasm/encoding/src/: EncodeAPI.cc  Frame.cc  GPUContext.cc  Gpac.cc  MP4Reader.cc  MultipleEncoderManager.cc  VideoDecoder.cc  VideoDecoderSession.cc  VideoEncoder.cc
tasm/interface/include/: ImageUtilities.h  SemanticSelection.h  Tasm.h  TemporalSelection.h
tasm/interface/src/: Tasm.cc
tasm/operators/include/: DecodeOperators.h  MergeTiles.h  Operator.h  ScanOperators.h  ScanTiledVideoOperator.h  TileOperators.h  TransformToImage.h
tasm/operators/src/: MergeTiles.cc  ScanTiledVideoOperator.cc  TileOperators.cc  TransformToImage.cc
tasm/semantic_index/include/: SemanticDataManager.h  SemanticIndex.h
tasm/semantic_index/src/: SemanticIndex.cc
tasm/tiles/include/: LayoutDatabase.h  Rectangle.h  RegretAccumulator.h  SmartTileConfigurationProvider.h  TileConfigurationProvider.h  TileLayout.h  TileLocationProvider.h  TiledVideoManager.h  WorkloadCostEstimator.h
tasm/tiles/src/: LayoutDatabase.cc  RegretAccumulator.cc  SmartTileConfigurationProvider.cc  TileConfigurationProvider.cc  TiledVideoManager.cc  WorkloadCostEstimator.cc
tasm/utilities/include/: ColorSpace.cu  EnvironmentConfiguration.h  Files.h  Interval.h  IntervalTree.h  NvCodecUtils.h  Transaction.h  spsc_queue.h
tasm/utilities/src/: EnvironmentConfiguration.cc  Transaction.cc
tasm/video/include/: Configuration.h  Video.h  VideoConfiguration.h  VideoManager.h
tasm/video/src/: Video.cc  VideoConfiguration.cc  VideoManager.cc
test/: CMakeLists.txt
test/resources/: remove-tiles.sh
(+45 files in other folders)
